# snapoly

./: .gitignore  CMakeLists.txt  Enhanced_constrained_delaunay_triangulation_2.cpp  Enhanced_constrained_delaunay_triangulation_2.h  Headers.h  LOG.txt  README.md  Snap_rounding_2.cpp  Snap_rounding_2.h  io.cpp  io.h  snapoly.cpp  snapoly.sln
data/: ab_res.gpkg  abcon.gpkg  abres.gpkg  abtri.gpkg  andorra.gpkg  casecon.gpkg  caseres.gpkg  casetri.gpkg  missing.gpkg  missingcon.gpkg  missingres.gpkg  missingtri.gpkg
data/andorra_1/: ab.gpkg  abcon.gpkg  abres.gpkg  abtri.gpkg  case.gpkg  casecon.gpkg  caseres.gpkg  points.gpkg
datasets/: readme.md
snapoly/: snapoly.vcxproj  snapoly.vcxproj.filters
snapoly/src/: Enhanced_constrained_delaunay_triangulation_2.cpp  Enhanced_constrained_delaunay_triangulation_2.h  Snap_rounding_2.cpp  Snap_rounding_2.h  io.cpp  io.h  main.cpp  pch.h
